Trying to fix pipeline

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/butikk
+spring.datasource.url=jdbc:mysql://localhost:3306/HandelUtenHemninger
 spring.datasource.username=root
 spring.datasource.password=0VQAp3uMs
 spring.jpa.hibernate.ddl-auto=update
