--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>10.1.5</version>
+        </dependency>
     </dependencies>
 
     <build>
