--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: node:latest
 
 stages:
+  - prepare
   - install
   - test:unit
 #  - test:e2e
@@ -10,6 +11,19 @@ cache:
   paths:
     - Frontend/node_modules
 #    - .cache/Cypress
+
+clean_cache:
+  stage: prepare
+  script:
+    - cd Frontend
+    - echo "Cleaning cache..."
+    - rm -rf node_modules/
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - Frontend/node_modules/
+    policy: pull
+  when: manual
 
 install:
   stage: install
