--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -85,6 +85,13 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>10.1.5</version>
         </dependency>
+
+        <!-- JSON converter -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
 
     <build>
