--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.context-path=/api
+
 spring.datasource.url=jdbc:mysql://localhost:3306/HandelUtenHemninger
 spring.datasource.username=root
 spring.datasource.password=0VQAp3uMs
