Added sql server in project files

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/HandelUtenHemninger
 spring.datasource.username=root
-spring.datasource.password=0VQAp3uMs
+spring.datasource.password=my-secret-pw
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
